# uscode

./: .gitignore  .gitmodules  Doxyfile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  configure  configure.ac  configure.scan  hello.c  include_everything.m  libtool
.github/workflows/: codeql.yml
Legiscode.applescript/: .gitignore  Document.applescript  Info.plist  LegisCode.sdef  Legiscode.applescript.applescript  Legiscode.scpt  USHR.icns  readme.md
Legiscode.applescript/DTDs/: uscbell.dtd
Legiscode.applescript/English.lproj/: Document.xib  InfoPlist.strings  MainMenu.xib
Legiscode.applescript/Legiscode.applescript.xcodeproj/: project.pbxproj
Legiscode.applescript/lciframework.framework/: lciframework
docs/html/: _c_make_c_compiler_id_8c_source.html  _legiscode_8applescript_2build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2li5d3535a130d9ed85e60363c504206a6c_source.html  _legiscode_8applescript_2build_2_debug_2_legiscode_8applescript_8app_2_contents_2_resources_2autoparser_8py_source.html  _legiscode_8applescript_2build_2_debug_2_legiscode_8applescript_8app_2_contents_2_resources_2retrieve__code_8py_source.html  _legiscode_8applescript_2libxml_8framework_2_versions_22_86_830_2_headers_2parser_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_n_s_array_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_n_s_data_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_n_s_dictionary_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_n_s_object_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_n_s_set_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_n_s_string_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_r_k_cache_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_r_k_enumerator_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_r_k_regex_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_regex_kit_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_regex_kit_defines_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2_regex_kit_types_8h_source.html  _regex_kit_8framework_2_versions_2_a_2_headers_2pcre_8h_source.html  annotated.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver16c7865e970623199f1a9d65ce4e077d_source.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver1cd635a06e11a32a04bff52d58c5020a_source.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver49966dec1014b0cf33f2bbca0cd9d9eb_source.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver62a5359ed4d073c6e232033ec8589dfd_source.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver6badb567721199c846b702eb2e103295_source.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver87300d08ec4df08896206cbd62ff2a79_source.html  build_2_debug_2_legiscode_8applescript_8app_2_contents_2_frameworks_2_regex_kit_8framework_2_ver925c98324bdaad065e3019f6ed1e09b4_source.html  (+289 more)
docs/latex/: annotated.tex  doxygen.sty  files.tex  index.tex  interpreter_8h.tex  (+97 more)
info/: LegisCode.md  LegisCode.sdef.xml  LegisCode.txt  LegisCodeDesign.md  RE_ Taking Advantage Of The Digital Medium In Writing_Publishing The US Code.eml  Readme.md  uscbell.dtd
m4/: EbgMacOSXOptions.m4
src/: uscode_wget_scripts.fraiseProject  wget_pdf.sh  wget_xhtml.sh  wget_zip.sh
(+1720 files in other folders)
